Fixed AQI card alignment

--- a/WeatherForecastApp/static/style.css
+++ b/WeatherForecastApp/static/style.css
@@ -370,6 +370,10 @@ h1{
 }
 
 
+
+
+
+
 /* =========================
    AQI CARD
 ========================= */
@@ -388,16 +392,33 @@ h1{
 
     padding:25px;
 
+    display:flex;
+
+    flex-direction:column;
+
+    align-items:center;
+
+    justify-content:center;
+
+    text-align:center;
+}
+
+.aqi-card h3{
+
+    margin-bottom:20px;
+
     text-align:center;
 }
 
 .aqi-gauge{
 
+    width:100%;
+
     display:flex;
 
     justify-content:center;
 
-    margin-top:15px;
+    align-items:center;
 }
 
 .aqi-circle{
@@ -421,16 +442,27 @@ h1{
 
     align-items:center;
 
+    margin:20px auto;
+
     font-size:2rem;
 
     font-weight:bold;
 
+    color:white;
+
     box-shadow:
-    0 0 25px rgba(34,197,94,.5);
+    0 0 25px rgba(34,197,94,.4);
 }
-/* =========================
-   MAP CARD
-========================= */
+
+.aqi-card h2{
+
+    margin-top:20px;
+
+    text-align:center;
+
+    width:100%;
+}
+
 
 .map-card{
 
